Added some spit and polish

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,6 +103,9 @@ section {
     margin: 1em;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #contact {
@@ -129,6 +132,22 @@ button {
     border-radius: 5px;
     margin: 1em 0;
     cursor: pointer;
+}
+
+.card-images {
+    height: 100px;
+}
+
+.card-images:hover {
+    height: 120px;
+    transition: 0.5s;
+}
+
+footer {
+    text-align: center;
+    padding: 1em;
+    background-color: var(--nav-background-color);
+    color: var(--nav-color);
 }
 
 /* ****** ****** */
